(Refactoring) - Fixed a bug with colors theme and high contrast mode changes. Removed useless CSS. Handle now login system failure in the website UI (in the navbar).

--- a/src/components/modules/Navbar/Navbar.module.scss
+++ b/src/components/modules/Navbar/Navbar.module.scss
@@ -1,5 +1,3 @@
-@import "../../../styles/Themes.module";
-
 .navbar {
   z-index: 7;
   width: calc(100% - 1rem);
@@ -91,9 +89,10 @@
 
       .account {
         img {
+          width: 30px;
+          height: 30px;
           margin-right: 1rem;
           border-radius: 50%;
-          transform: scale(1.25);
         }
 
         span {
